CHATS_SIT/force-app/main/default/objects/T_ADJMT_ADDR__c.object
<CustomObject>
    <description>Information about the address used to create adjustment related correspondence</description>
    <fields>
        <fullName>Adjustment_Responsible_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment Responsible Party</label>
        <referenceTo>T_ADJMT_RESPBL_PARTY__c</referenceTo>
        <relationshipLabel>Adjustment Addresses</relationshipLabel>
        <relationshipName>Adjustment_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_Party_Client_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Responsible Party Client Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Party_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Responsible Party Name</label>
        <inlineHelpText>When Adjustments are created for a Provider the field Responsible Party Name will be blank.</inlineHelpText>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_CITY__c</fullName>
        <description>City</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_1__c</fullName>
        <description>Address Line 1</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Address Line 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_2__c</fullName>
        <description>Address Line 2</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Address Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_STATE__c</fullName>
        <description>State</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00002</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADR_ZIP_EXTN__c</fullName>
        <description>Zip Code ext</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Zip Code ext</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_ZIP_MAIN__c</fullName>
        <description>Zip Code</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_ADJMT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Adjustment</description>
        <label>Adjustment</label>
        <referenceTo>T_ADJMT__c</referenceTo>
        <relationshipLabel>Adjustment Address</relationshipLabel>
        <relationshipName>Adjustment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Adjustment Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustment Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_parent_record_type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  NOT(ISNULL(IDN_ADJMT__c)),
  NOT(ISNEW()),
  AND(
    IDN_ADJMT__r.RecordType.Name == &apos;Finalized&apos;,
    NOT(ISPICKVAL(IDN_ADJMT__r.CDE_STATUS_ADJMT__c, &apos;2&apos;))
  )
)</errorConditionFormula>
        <errorMessage>You cannot update this record as the associated Adjustment is Finalized</errorMessage>
    </validationRules>
</CustomObject>