CHATS_SIT/force-app/main/default/objects/T_ADJMT_ADDR__c/validationRules/Check_parent_record_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_parent_record_type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISNULL(IDN_ADJMT__c)),
  NOT(ISNEW()),
  AND(
    IDN_ADJMT__r.RecordType.Name == &apos;Finalized&apos;,
    NOT(ISPICKVAL(IDN_ADJMT__r.CDE_STATUS_ADJMT__c, &apos;2&apos;))
  )
)</errorConditionFormula>
    <errorMessage>You cannot update this record as the associated Adjustment is Finalized</errorMessage>
</ValidationRule>